ros2_ws/log/build_2025-07-19_11-13-46/py_pubsub/stderr.log
  File "/home/henry/Rover-Unity/ros2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/tcp_relay.py", line 102
    message+=:f"{msg};"
             ^
SyntaxError: invalid syntax

